update for tensorflow.js 1.0

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
   </footer>
 
   <script src="https://unpkg.com/dat.gui"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.0.0"></script>
   <script src="lib/Tone.min.js"></script>
   
   <script type="module" src="js/coco-common.js"></script>
