update footer links

--- a/index.html
+++ b/index.html
@@ -107,9 +107,9 @@
   </div>
 
   <footer>
-    based on <a href="https://github.com/vabarbosa/veremin" target="_blank">veremin</a> | 
     powered by the <a href="https://github.com/IBM/MAX-Human-Pose-Estimator" target="_blank">MAX Human Pose Estimator</a> | 
-    made possible with <a href="https://js.tensorflow.org" target="_blank">TensorFlow.js</a>
+    made possible with <a href="https://js.tensorflow.org" target="_blank">TensorFlow.js</a> |
+    learn more at <a href="https://developer.ibm.com/patterns/making-music-with-the-max-human-pose-estimator-and-tensorflowjs/" target="_blank">IBM Developer</a>
   </footer>
 
   <script src="https://unpkg.com/dat.gui"></script>
