--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
   <footer>
     powered by the <a href="https://github.com/IBM/MAX-Human-Pose-Estimator" target="_blank">MAX Human Pose Estimator</a> | 
     made possible with <a href="https://js.tensorflow.org" target="_blank">TensorFlow.js</a> |
-    learn more at <a href="https://developer.ibm.com/patterns/making-music-with-the-max-human-pose-estimator-and-tensorflowjs/" target="_blank">IBM Developer</a>
+    learn more about the <a href="https://developer.ibm.com/patterns/making-music-with-the-max-human-pose-estimator-and-tensorflowjs/" target="_blank">code</a>
   </footer>
 
   <script src="https://unpkg.com/dat.gui"></script>
