use human pose estimator npm package
- local model assets with npm package
- removed preprocessing/post processing code
- updated config options
- update README

--- a/index.html
+++ b/index.html
@@ -113,17 +113,16 @@
   </footer>
 
   <script src="https://unpkg.com/dat.gui"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.0.0"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@codait/max-human-pose-estimator"></script>
   <script src="lib/Tone.min.js"></script>
   
-  <script type="module" src="js/coco-common.js"></script>
   <script type="module" src="js/chord-intervals.js"></script>
   <script type="module" src="js/tonejs-presets.js"></script>
   <script type="module" src="js/canvas-overlay.js"></script>
   <script type="module" src="js/camera-util.js"></script>
   <script type="module" src="js/audio-controller.js"></script>
   <script type="module" src="js/control-panel.js"></script>
-  <script type="module" src="js/pose-estimator.js"></script>
   <script type="module" src="js/veremax.js"></script>
 </body>
 </html>
